working task reminder & due date, folder sharing and interactable notifications for viewing

--- a/web-interface/home.html
+++ b/web-interface/home.html
@@ -37,6 +37,12 @@
         <option value="image">Image</option>
       </select>
       
+      <!-- Due Date Input -->
+      <div style="margin-top: 10px;">
+        <label for="dueDateInput" style="font-size: 14px; color: #666;">Due Date (optional):</label>
+        <input type="datetime-local" id="dueDateInput" style="padding: 8px; border-radius: 8px; border: 1px solid #d1d5db;">
+      </div>
+      
       <!-- Text input (hidden by default) -->
       <div id="textAreaContainer" style="display:none; width: 100%; margin-top: 10px;">
         <textarea id="textArea" placeholder="Enter detailed text here..." rows="4" style="width: 100%; padding: 10px; border-radius: 8px; border: 1px solid #d1d5db;"></textarea>
